# functional-comparison

./: .gitignore  FC.sublime-project  FC.sublime-workspace  Latest Times  Results.numbers  Results.txt  Results2.txt  RunRuby.sh  b.bat  build.bat  build.sh  clean.bat  clean.sh  process.py  process_sorted.py  run.sh
.metals/: metals.lock.db
BlitzMax/: Activity.bmx  Activity.bmx.bak  Allocation.bmx  Allocation.bmx.bak  Greedy.bmx  Greedy.bmx.bak  Resource.bmx  Resource.bmx.bak
C/: greedy.c
C#/: CSharp.csproj  CSharp.sln  CSharp.userprefs  Program.cs  project.lock.json
C++/: greedy  greedy.cpp  greedymap.cpp
Clojure/: project.clj
CommonLisp/: greedy.lisp  perfcomp.cl  run.sh
Crystal/: greedy  greedy-concurrent  greedy-concurrent.cr  greedy.cr
D/: greedy  greedy.d  greedymap.d
Data/: Data.json  Data.xml  DataSPIF.csv  TestData.yaml
F#/: GreedyPerformance.fsproj  GreedyPerformance.sln  GreedyPerformance.userprefs  Start.fs
Forth/: greedy.forth
Fortran/: constants.mod  greedy.f90  types.mod
Go/: greedy  greedy.go
Go-Concurrent/: Go-Concurrent  greedy-channels.go
Haskell/: .ghc.environment.x86_64-linux-8.6.5  GreedyPerformance.cabal  Main  Main.hs  Main.prof
Java/: Greedy-Concurrent.java  Greedy.java  graal.sh  graal.sh.save
Julia/: greedy.jl
Kotlin/: Greedy.kt  GreedyNative.kt  kotlin.sh
Monkey-X/: greedy.monkey
NodeJS/: greedy-concurrent.js  greedy.js
OCaml/: main.ml
PiBasic/: greedy.bas  output.cpp  output.txt  shared.h
Python/: build.sh  greedy-concurrent.py  greedy-hashset.py  greedy-numba.py  greedy.c  greedy.py  greedycython.c  (+11 more)
(+134 files in other folders)
