name:                GreedyPerformance
version:             0.1.0.0
synopsis:            Greedy algorithm performance tester
author:              Daryl Dudey
maintainer:          daryljdudey@googlemail.com
build-type:          Simple
cabal-version:       >=1.8

executable GreedyPerformance
  main-is:           Main.hs
  build-depends:     base == 4.*, MissingH >=1.4, parsec >= 3.1
  ghc-options:       -Wall -O3