name:                GreedyPerformance
version:             0.1.0.0
synopsis:            Greedy algorithm performance tester
author:              Daryl Dudey
maintainer:          daryljdudey@googlemail.com
build-type:          Simple
cabal-version:       >=1.10

executable GreedyPerformance
  default-language:  Haskell2010
  main-is:           Main.hs
  build-depends:     base == 4.*, MissingH, parsec
  ghc-options:       -Wall -O3 
-- -threaded +RTS -N16